feat: Adicionar conteúdo ao iframe pre-interação
Antes da interação com os links, o iframe permanecia em branco, isso podia ser resolvido colocando algum endereço ja como padrão inicial do iframe, mas por proposito de aprendizagem foi utilizado o parametro "srcdoc".

--- a/Guanabara/html-css/exercicios/024/iframe003.html
+++ b/Guanabara/html-css/exercicios/024/iframe003.html
@@ -26,7 +26,8 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis porro, inventore veritatis minus, eius praesentium commodi consectetur perspiciatis cupiditate, atque esse ea quasi. Et distinctio, similique modi earum explicabo laudantium.
     Aut ex culpa amet labore ea cumque, accusantium illum impedit doloribus odio enim sed nobis? Dolorum pariatur rem beatae commodi cupiditate, in mollitia vitae esse, praesentium et soluta ipsa quam?</p>
 
-    <iframe name="frame" src="" frameborder="1">
+    <iframe name="frame" srcdoc="<h1> Clique em alguma das ancoras acima</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis porro, inventore veritatis minus, eius praesentium commodi consectetur perspiciatis cupiditate, atque esse ea quasi. Et distinctio, similique modi earum explicabo laudantium.
+    Aut ex culpa amet labore ea cumque, accusantium illum impedit doloribus odio enim sed nobis? Dolorum pariatur rem beatae commodi cupiditate, in mollitia vitae esse, praesentium et soluta ipsa quam?</p><img src='../imgs/favicon.ico'>" frameborder="1">
         <p>Navegador infelizmente não suporta iframes</p>
     </iframe>
     
