--- a/Guanabara/html-css/desafios/014/index.html
+++ b/Guanabara/html-css/desafios/014/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
     <title>Redes Sociais</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <h1>Ola, Mundo!</h1>
+    <main>
+        <section id="telefone" name="telefone">
+            
+            <iframe src="telas/home.html" frameborder="0" id="tela" name="tela"></iframe>
+        </section>
+        <section id="icones">
+            <a href="telas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="telas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg"  alt=""></a><br>
+            <a href="telas/github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="telas/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="telas/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="telas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+        </section>
+    </main>
     
 </body>
 </html>
