feat: desativar o auto-completar do formulário
em proposito de aprendizagem desativei o autocompletar

--- a/Guanabara/html-css/exercicios/025/form.html
+++ b/Guanabara/html-css/exercicios/025/form.html
@@ -12,7 +12,7 @@
     <title>Primeiro formulario</title>
 </head>
 <body>
-    <form action="cadastro.php">
+    <form action="cadastro.php" autocomplete="off">
         <p>
             <label for="idnome">Nome:</label>
             <input type="text" name="nome" id="idnome">
