--- a/Guanabara/html-css/exercicios/025/form001.html
+++ b/Guanabara/html-css/exercicios/025/form001.html
@@ -12,7 +12,7 @@
     <title>Primeiro formulario</title>
 </head>
 <body>
-    <form action="cadastro.php" autocomplete="off">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p>
             <label for="idnome">Nome:</label>
             <input type="text" name="nome" id="idnome">
