chore: Adicionar arquivo global de estilização
para fins de organização e maior praticidade com interações futuras com os exercícios foi criado uma pagina "style.css" para facilitar a estilização dos novos projetos seguindo um padrão.

--- a/Guanabara/html-css/exercicios/025/form006.html
+++ b/Guanabara/html-css/exercicios/025/form006.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
-    <style>
-        html{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>Sexto Formulario</title>
 </head>
 <body>
